; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/dsp/extr_dec.c_HE4_C.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/dsp/extr_dec.c_HE4_C.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BPS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @HE4_C to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @HE4_C(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @BPS, align 4
  %10 = sub nsw i32 -1, %9
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %8, i64 %11
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %3, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 -1
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %4, align 4
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* @BPS, align 4
  %19 = add nsw i32 -1, %18
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %17, i64 %20
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %5, align 4
  %23 = load i32*, i32** %2, align 8
  %24 = load i32, i32* @BPS, align 4
  %25 = mul nsw i32 2, %24
  %26 = add nsw i32 -1, %25
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %23, i64 %27
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %6, align 4
  %30 = load i32*, i32** %2, align 8
  %31 = load i32, i32* @BPS, align 4
  %32 = mul nsw i32 3, %31
  %33 = add nsw i32 -1, %32
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %30, i64 %34
  %36 = load i32, i32* %35, align 4
  store i32 %36, i32* %7, align 4
  %37 = load i32*, i32** %2, align 8
  %38 = load i32, i32* @BPS, align 4
  %39 = mul nsw i32 0, %38
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %37, i64 %40
  %42 = load i32, i32* %3, align 4
  %43 = load i32, i32* %4, align 4
  %44 = load i32, i32* %5, align 4
  %45 = call i32 @AVG3(i32 %42, i32 %43, i32 %44)
  %46 = mul i32 16843009, %45
  %47 = call i32 @WebPUint32ToMem(i32* %41, i32 %46)
  %48 = load i32*, i32** %2, align 8
  %49 = load i32, i32* @BPS, align 4
  %50 = mul nsw i32 1, %49
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %48, i64 %51
  %53 = load i32, i32* %4, align 4
  %54 = load i32, i32* %5, align 4
  %55 = load i32, i32* %6, align 4
  %56 = call i32 @AVG3(i32 %53, i32 %54, i32 %55)
  %57 = mul i32 16843009, %56
  %58 = call i32 @WebPUint32ToMem(i32* %52, i32 %57)
  %59 = load i32*, i32** %2, align 8
  %60 = load i32, i32* @BPS, align 4
  %61 = mul nsw i32 2, %60
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %59, i64 %62
  %64 = load i32, i32* %5, align 4
  %65 = load i32, i32* %6, align 4
  %66 = load i32, i32* %7, align 4
  %67 = call i32 @AVG3(i32 %64, i32 %65, i32 %66)
  %68 = mul i32 16843009, %67
  %69 = call i32 @WebPUint32ToMem(i32* %63, i32 %68)
  %70 = load i32*, i32** %2, align 8
  %71 = load i32, i32* @BPS, align 4
  %72 = mul nsw i32 3, %71
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i32, i32* %70, i64 %73
  %75 = load i32, i32* %6, align 4
  %76 = load i32, i32* %7, align 4
  %77 = load i32, i32* %7, align 4
  %78 = call i32 @AVG3(i32 %75, i32 %76, i32 %77)
  %79 = mul i32 16843009, %78
  %80 = call i32 @WebPUint32ToMem(i32* %74, i32 %79)
  ret void
}

declare dso_local i32 @WebPUint32ToMem(i32*, i32) #1

declare dso_local i32 @AVG3(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
